Cleanup code for latest Java versions (#2404)